--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
   id "idea"
-  id "com.github.mxenabled.vogue" version "1.0.2"
-  id "com.github.mxenabled.coppuccino" version "3.2.9" apply false
+  id "com.github.mxenabled.vogue" version "1.0.3"
+  id "com.github.mxenabled.coppuccino" version "3.2.10" apply false
   id "io.freefair.lombok" version "6.5.1" apply false
   id "io.github.gradle-nexus.publish-plugin" version "1.1.0"
 }
@@ -36,7 +36,12 @@ allprojects {
     mavenCentral()
     mavenLocal()
   }
+
+  configurations.all {
+    resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
+  }
 }
+
 
 subprojects {
   if (it.name != platformProject) {
