--- a/.releaserc
+++ b/.releaserc
@@ -1,7 +1,8 @@
 {
   "branches": [
     { name: "master" },
-    { name: "rc", prerelease: "rc" }
+    { name: "rc", prerelease: "rc" },
+    { name: "+([0-9])?(.{+([0-9]),x}).x" }
   ],
   "plugins": [
     [
