--- a/build.gradle
+++ b/build.gradle
@@ -54,17 +54,17 @@ subprojects {
       constraints {
         api("com.google.code.gson:gson") {
           version {
-            require "[2.9,2.10["
+            require "[2.9,2.10)"
           }
         }
         api("io.opentracing:opentracing-api") {
           version {
-            require "[0.33,0.34["
+            require "[0.33,0.34)"
           }
         }
         api("com.google.guava:guava") {
           version {
-            require "[31.0,32.0["
+            require "[31.0,32.0)"
           }
         }
         api "commons-lang:commons-lang:2.6"
@@ -83,9 +83,9 @@ subprojects {
         // -----------------------------------------------------------------
       }
 
-      testImplementation "org.mockito:mockito-inline:[4.0,5.0["
-      testImplementation "org.spockframework:spock-core:[2.0,3.0["
-      testImplementation "org.junit.jupiter:junit-jupiter-api:[5.0,6.0["
+      testImplementation "org.mockito:mockito-inline:[4.0,5.0)"
+      testImplementation "org.spockframework:spock-core:[2.0,3.0)"
+      testImplementation "org.junit.jupiter:junit-jupiter-api:[5.9,5.10)"
     }
 
     test { useJUnitPlatform() }
