--- a/testing/build.gradle
+++ b/testing/build.gradle
@@ -1,9 +1,9 @@
 dependencies {
-  api "org.spockframework:spock-junit4:[2.0,3.0["
+  api "org.spockframework:spock-junit4:[2.0,3.0)"
 
   implementation project(":gateway")
-  implementation "org.spockframework:spock-core:[2.0,3.0["
-  implementation "org.mockito:mockito-inline:[4.0,5.0["
-  implementation"org.junit.jupiter:junit-jupiter-api:[5.0,6.0["
-  runtimeOnly "org.junit.jupiter:junit-jupiter-engine:[5.0,6.0["
+  implementation "org.spockframework:spock-core:[2.0,3.0)"
+  implementation "org.mockito:mockito-inline:[4.0,5.0)"
+  implementation "org.junit.jupiter:junit-jupiter-api:[5.9.5.10)"
+  runtimeOnly "org.junit.jupiter:junit-jupiter-engine:[5.9.5.10)"
 }
