--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 plugins {
   id "idea"
-  id "com.github.mxenabled.coppuccino" version "3.2.10" apply false
-  id "com.github.mxenabled.vogue" version "1.0.3"
-  id "io.freefair.lombok" version "6.6.+" apply false
+  id "com.github.mxenabled.coppuccino" version "3.+" apply false
+  id "com.github.mxenabled.vogue" version "1.+"
+  id "io.freefair.lombok" version "8.0.+" apply false
   id "io.github.gradle-nexus.publish-plugin" version "1.1.0"
 }
 
