--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
   id "io.github.gradle-nexus.publish-plugin" version "1.1.0"
 }
 
-version "3.4.0" // x-release-please-version
+version "3.5.0-SNAPSHOT" // x-release-please-version
 
 def platformProject = "platform"
 def publishedProjects = [
