--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,12 @@ plugins {
   id "idea"
   id "com.github.mxenabled.coppuccino" version "3.+" apply false
   id "com.github.mxenabled.vogue" version "1.+"
+  id "com.github.mxenabled.binks" version "0.+"
   id "io.freefair.lombok" version "8.0.+" apply false
   id "io.github.gradle-nexus.publish-plugin" version "1.1.0"
 }
 
-version "3.7.0-SNAPSHOT" // x-release-please-version
+version "3.7.0-rc.2" // x-release-please-version
 
 def platformProject = "platform"
 def publishedProjects = [
