feat: add retry configuration node
This is a configuration node that can be placed in a configuration
object. It will be bound and validated. The connection code can
then use it to build an instance of a Retryer, based on the
configuration provided.

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -11,6 +11,7 @@ dependencies {
   api "com.github.spotbugs:spotbugs-annotations:4.7.2" // For annotating classes and methods to suppress SpotBugs violations
   api "com.google.code.gson:gson"
   api "org.yaml:snakeyaml:1.33"
+  implementation "org.slf4j:slf4j-api"
   implementation "org.objenesis:objenesis:3.3"
   testImplementation "org.objenesis:objenesis:3.3"
 }
