--- a/build.gradle
+++ b/build.gradle
@@ -90,7 +90,7 @@ subprojects {
       }
 
       testImplementation "org.mockito:mockito-inline:[4.0,5.0)"
-      testImplementation "org.spockframework:spock-core:[2.0,3.0)"
+      testImplementation "org.spockframework:spock-core:2.4-M1-groovy-4.0"
       testImplementation "org.junit.jupiter:junit-jupiter-api:[5.9,5.10)"
     }
 
