refactor: change from brave tracing to datadog tracing
Change from creating a new brave tracing scope to using received datadog tracing scope

test: add test file back in

adding test file back

refactor: update lib

update lib

refactor: add request headers

add request headers

refactor: remove version bump

remove version bump

BREAKING CHANGE: Updating classes used for tracing

refactor: update tracing messages

feat: add internal flag to PathRequestException

Add new internal flag to PathRequestException. When true, the will
add X-Internal-Error header to response. Also fixing up fluent method
return types to use implicit type to avoid unneeded cast operations.

refactor: rebase master

refactor: rebase master

refactor: rebase master

refactor: rebase master

refactor: update Remote Messages Tracing

Update remote messages to use global tracing instead of custom tracer

BREAKING CHANGE: Remove setup of CustomTracer

style: fix missing empty line

feat: add internal flag to PathRequestException

Add new internal flag to PathRequestException. When true, the will
add X-Internal-Error header to response. Also fixing up fluent method
return types to use implicit type to avoid unneeded cast operations.

chore(master): release 3.15.0

--- a/messaging/build.gradle
+++ b/messaging/build.gradle
@@ -9,6 +9,7 @@ dependencies {
   implementation project(":common")
 
   implementation "io.opentracing:opentracing-api"
+  implementation "io.opentracing:opentracing-util"
   compileOnly "org.slf4j:slf4j-api"
 
   testImplementation "io.opentracing:opentracing-mock:0.33.0"
