--- a/build.gradle
+++ b/build.gradle
@@ -212,8 +212,8 @@ nexusPublishing {
 
   repositories {
     central {
-      nexusUrl = uri("https://s01.oss.sonatype.org/service/local/")
-      snapshotRepositoryUrl = uri("https://s01.oss.sonatype.org/content/repositories/snapshots/")
+      nexusUrl = uri("https://ossrh-staging-api.central.sonatype.com/service/local/")
+      snapshotRepositoryUrl = uri("https://central.sonatype.com/repository/maven-snapshots/")
       username = ossrhUserName
       password = ossrhToken
     }
