--- a/testing/build.gradle
+++ b/testing/build.gradle
@@ -1,9 +1,10 @@
 dependencies {
-  api "org.spockframework:spock-junit4:[2.0,3.0)"
+  api "org.spockframework:spock-junit4:${project.ext.spockVersion}"
 
   implementation project(":gateway")
-  implementation "org.mockito:mockito-inline:[4.0,5.0)"
-  implementation "org.spockframework:spock-core:[2.0,3.0)"
-  implementation "org.junit.jupiter:junit-jupiter-api:[5.9.0,5.10.0)"
-  runtimeOnly "org.junit.jupiter:junit-jupiter-engine:[5.9.0,5.10.0)"
+  implementation "org.assertj:assertj-core:[3.0,4.0)"
+  implementation "org.mockito:mockito-inline:${project.ext.mockitoVersion}"
+  implementation "org.spockframework:spock-core:${project.ext.spockVersion}"
+  implementation "org.junit.jupiter:junit-jupiter-api:${project.ext.junitVersion}"
+  runtimeOnly "org.junit.jupiter:junit-jupiter-engine:${project.ext.junitVersion}"
 }
