--- a/testing/build.gradle
+++ b/testing/build.gradle
@@ -1,7 +1,7 @@
 dependencies {
   implementation project(":gateway")
   implementation "org.assertj:assertj-core:[3.0,4.0)"
-  implementation "org.mockito:mockito-inline:${project.ext.mockitoVersion}"
+  implementation "org.mockito:mockito-core:${project.ext.mockitoVersion}"
   implementation "org.spockframework:spock-core:${project.ext.spockVersion}"
   implementation "org.junit.jupiter:junit-jupiter-api:${project.ext.junitVersion}"
 }
